[package]
name = "relay-rococo-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
subxt = { version = "0.31.0", default-features = false, features = ["native"] }

# Bridge dependencies

bp-polkadot-core = { workspace = true, default-features = false }
bp-rococo =  { workspace = true, default-features = false }

relay-substrate-client =  { workspace = true }
relay-utils =  { workspace = true }

# Substrate Dependencies

sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-weights = { workspace = true }
