[package]
name = "relay-rococo-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true, features = ["derive"] }
subxt = { workspace = true, features = ["native"] }

# Bridge dependencies

bp-polkadot-core = { workspace = true }
bp-rococo =  { workspace = true, features = ["std"] }

relay-substrate-client =  { workspace = true }
relay-utils =  { workspace = true }

# Substrate Dependencies

sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-weights = { workspace = true }
