[package]
name = "relay-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { workspace = true, package = "parity-scale-codec", features = ["derive"] }

# Bridge dependencies
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Dependencies
frame-support = { workspace = true, package = "frame-support", features = ["std"] }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
