[package]
name = "laos-relay"
version = "0.1.0"
edition = "2021"
authors = ["Freeverse"]

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.1.5" }
futures = "0.3.28"
hex = "0.4"
log = "0.4.19"
num-format = "0.4"
num-traits = "0.2"
rbtag = "0.3"
rustc-hex = "2.1"
structopt = "0.3"
signal-hook = "0.3.16"
signal-hook-async-std = "0.2.2"
strum = { version = "0.25.0", features = ["derive"] }

relay-laos-evolution-client = { path="../client-laos-evolution" }
relay-laos-ownership-client = { path="../client-laos-ownership" }
relay-rococo-client = { path = "../client-rococo" }

# Bridge dependencies
bp-header-chain = { workspace = true }
bp-parachains = { workspace = true }
bp-messages = { workspace = true }
bp-runtime = { workspace = true }
bp-rococo = { workspace = true }
pallet-bridge-parachains = { workspace = true }
relay-substrate-client = { workspace = true }
relay-utils = { workspace = true }

# we are not using this runtime to craft call or transactions, but we still need it
# to prepare large XCM messages
substrate-relay-helper = { workspace = true }

# Chain primitives
evochain-primitives = { workspace = true }
laos-evolution-runtime = { workspace = true }

# Substrate Dependencies
sp-core = { workspace = true }
pallet-sudo = { workspace = true }

[dev-dependencies]
bp-test-utils = { workspace = true }
hex-literal = "0.4"
finality-grandpa = { version = "0.16.2" }
