[package]
name = "laos-relay"
version = "0.1.0"
edition = "2021"
authors = ["Freeverse"]

[dependencies]
anyhow = { workspace = true }
async-std =  { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, package = "parity-scale-codec" }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-format = { workspace = true }
num-traits = { workspace = true }
rbtag = { workspace = true }
rustc-hex = { workspace = true}
structopt = { workspace = true }
signal-hook = { workspace = true }
signal-hook-async-std = { workspace = true }
strum = { workspace = true, features = ["derive"] }

relay-laos-evolution-client = { workspace = true }
relay-laos-ownership-client = { workspace = true }
relay-rococo-client = { workspace = true }

# Bridge dependencies
bp-header-chain = { workspace = true }
bp-parachains = { workspace = true }
bp-messages = { workspace = true }
bp-runtime = { workspace = true }
bp-rococo = { workspace = true }
pallet-bridge-parachains = { workspace = true }
relay-substrate-client = { workspace = true }
relay-utils = { workspace = true }

# we are not using this runtime to craft call or transactions, but we still need it
# to prepare large XCM messages
substrate-relay-helper = { workspace = true }

# Chain primitives
evochain-primitives = { workspace = true }
laos-evolution-runtime = { workspace = true }

# Substrate Dependencies
sp-core = { workspace = true }
pallet-sudo = { workspace = true }

[dev-dependencies]
bp-test-utils = { workspace = true }
hex-literal = { workspace = true }
finality-grandpa = { workspace = true }
