[package]
name = "ethereum-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
impl-serde = { version = "0.4.0", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
libsecp256k1 = { version = "0.7.1", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
std = [
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]