[package]
name = "pallet-collator-rewards"
version = "4.0.0-dev"
homepage = "https://freeverse.io"
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
pallet-authorship = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-session = { workspace = true, optional = true }

[dev-dependencies]
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true, features = ["std", "insecure_zero_ed"] }
pallet-collator-selection = { workspace = true, features = ["std"] }
pallet-aura = { workspace = true, features = ["std"] }
pallet-session = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
    "frame-benchmarking",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
    "pallet-authorship/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
    "pallet-session",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
    "pallet-authorship/try-runtime",
]
