[package]
name = "pallet-parachain-staking"
authors = { workspace = true }
description = "parachain staking pallet for collator selection and reward distribution"
edition = "2021"
version = "3.0.0"

[dependencies]
log = { workspace = true }
serde = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-runtime = { workspace = true, features = ["serde"] }
sp-staking = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = [ "insecure_zero_ed", "std" ] }
similar-asserts = { workspace = true }
sp-core = { workspace = true, features = [ "std" ] }
sp-io = { workspace = true, features = [ "std" ] }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"substrate-fixed/std",
	"log/std",
	"serde/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]