[package]
name = "pallet-parachain-staking"
description = "Parachain parachain-staking pallet for collator delegation and selection as well as reward distribution"
authors = { workspace = true }
edition = "2021"
version = "3.0.0"

[dev-dependencies]
pallet-aura = {workspace = true, features = ["std"]}
pallet-timestamp = {workspace = true, features = ["std"]}
sp-consensus-aura = {workspace = true, features = ["std"]}
sp-core = {workspace = true, features = ["std"]}
sp-io = {workspace = true, features = ["std"]}

[dependencies]
# Local dependencies
laos-runtime-api-staking = { workspace = true }

# External dependencies
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
serde = { workspace = true, default-features = false, features = ["derive"] }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-session/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "serde/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
  "laos-runtime-api-staking/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
]
try-runtime = [
  "frame-system/try-runtime",
  "frame-support/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-session/try-runtime",
]
